# PDFParser

./: .gitignore  CMakeLists.txt
include/: CompareFunctions.h  PDFParser.h
include/AnsysReport/: AnsysReport.h  Chapter.h
include/Composite/: Component.h  ComponentDiffBase.h  CompositeComponentDiff.h  ReportComposite.h  SettingsDataMap.h  SettingsDataTable.h  TableComponentDiff.h
include/ParsingStrategy/: ParsingContext.h  ParsingNestedTable.h  ParsingOrdinaryTable.h  ParsingStrategy.h
src/: CompareFunctions.cpp  PDFParser.cpp  main.cpp
src/AnsysReport/: AnsysReport.cpp
src/Composite/: Component.cpp  ComponentDiffBase.cpp  CompositeComponentDiff.cpp  ReportComposite.cpp  SettingsDataTable.cpp  TableComponentDiff.cpp
src/ParsingStrategy/: ParsingContext.cpp  ParsingNestedTable.cpp  ParsingOrdinaryTable.cpp  ParsingStrategy.cpp
